[workspace]
members = ["brainfuck-macro", "brainfuck-example"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Philipp"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/philipp/brainfuck-macro"

[workspace.dependencies]
brainfuck-macro = { path = "brainfuck-macro" }
